[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Theme" id=2]
/colors/lbl = Color( 0, 0, 0, 1 )
Label/styles/normal = SubResource( 1 )

[node name="Control" type="Control"]
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 496.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 496.0
margin_bottom = 41.0
mouse_filter = 0
theme = SubResource( 2 )
text = "Drag the animation resource files here..."
align = 1
valign = 1

[node name="line_upperbody" type="LineEdit" parent="."]
margin_left = 96.0
margin_top = 49.0
margin_right = 428.0
margin_bottom = 74.0

[node name="lbl" type="Label" parent="line_upperbody"]
margin_left = -140.0
margin_right = -8.0
margin_bottom = 32.0
text = "upperbody_anim"
align = 2
valign = 1

[node name="btn_browse" type="Button" parent="line_upperbody"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 340.0
margin_right = 32.0
margin_bottom = -1.0
text = "..."

[node name="btn_delete" type="Button" parent="line_upperbody"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 372.0
margin_right = 60.0
margin_bottom = -1.0
text = "x"

[node name="line_head" type="LineEdit" parent="."]
margin_left = 96.0
margin_top = 78.0
margin_right = 428.0
margin_bottom = 103.0

[node name="lbl" type="Label" parent="line_head"]
margin_left = -120.0
margin_right = -8.0
margin_bottom = 32.0
text = "head_anim"
align = 2
valign = 1

[node name="btn_browse" type="Button" parent="line_head"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 340.0
margin_right = 32.0
margin_bottom = -1.0
text = "..."

[node name="btn_delete" type="Button" parent="line_head"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 372.0
margin_right = 60.0
margin_bottom = -1.0
text = "x"

[node name="Button" type="Button" parent="."]
margin_left = 372.0
margin_top = 108.0
margin_right = 488.0
margin_bottom = 136.0
text = "set files"
